# tw-news-analysis

./: .env.example  .gitignore  README.md  pyproject.toml  test_ollama.py
app/: __init__.py  config.py  database.py  main.py  models.py  scheduler.py  schemas.py
app/services/: archive_scheduler.py  crawler_service.py  data_management_service.py  deduplication_service.py  pending_url_service.py  reparse_service.py
app/services/pipeline/: __init__.py  article_fetcher.py  llm_analysis_service.py  llm_filter_service.py  pipeline_orchestrator.py  pipeline_run_store.py  result_store_service.py  rule_filter_service.py  statistics_service.py
app/services/pipeline/analysis/: base_provider.py  openai_batch_provider.py  result_store.py  schemas.py  timescale_store.py
app/services/pipeline/llm_providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  groq_provider.py  openai_provider.py
app/templates/: index.html
app/templates/data_management/: index.html
app/templates/data_management/partials/: archive_result.html  archive_result_all.html  archive_tab.html  job_progress.html  reparse_tab.html  restore_result.html  source_card.html  statistics_tab.html
app/templates/partials/: crawler_row.html  crawler_table.html
cli/: __init__.py  __main__.py  pipeline.py
crawlers/: base.py  chinatimes_crawler.py  cna_crawler.py  ettoday_crawler.py  ltn_crawler.py  registry.py  setn_crawler.py  tvbs_crawler.py  udn_crawler.py
docs/: pipeline-cli.md
docs/plans/: 2026-02-17-llm-analysis-design.md  2026-02-17-llm-analysis-impl.md
prompts/: system_prompt.py
