[project]
name = "news-analyze"
version = "0.1.0"
description = ""
authors = [
    {name = "Roger Lo",email = "roger.lo@goodfinance.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "apscheduler>=3.10.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4>=4.12.0",
    # Pipeline dependencies
    "rich>=13.0.0",
    "typer>=0.12.0",
    # LLM providers
    "groq>=0.9.0",
    "anthropic>=0.34.0",
    "openai>=1.40.0",
    "google-generativeai>=0.7.0",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
